--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipe List</title>
+  <title>Mochi</title>
 </head>
 <body>
-  <h1>Recipe List</h1>
-  <a href="../odin-recipes/recipes/mochi.html">Mochi Recipe</a>
+  <h1>Mochi with Red Bean</h1>
+  <img src="../images/mochi.jpg">
 </body>
 </html>
