Added in required information for recipe. Also incorporated a scaling image to match browser's window size

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe List</title>
 </head>
+
 <body>
   <h1>Recipe List</h1>
-  <a href="../odin-recipes/recipes/mochi.html">Mochi Recipe</a>
+
+  <ul>
+    <li><a href="../odin-recipes/recipes/mochi.html">Mochi Recipe</a></li>
+
+  </ul>
+
 </body>
 </html>
