--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -8,6 +8,31 @@
 </head>
 <body>
   <h1>Mochi with Red Bean</h1>
-  <img src="../images/mochi.jpg">
+  <img src="../images/mochi.jpg" style="width: 100vw">
+  <h3>Ingredient List:</h3>
+  <ul>
+    <li>1 cup sweetened red bean paste</li>
+    <li>1 cup glutinous rice flour</li>
+    <li>1 teaspoon green tea powder (matcha)</li>
+    <li>1 cup water</li>
+    <li>1/4 cup white sugar</li>
+    <li>1/2 cup cornstarch</li>
+  </ul>
+
+  <h3>Cooking steps:</h3>
+  <ol>
+    <li>Prepare aluminium foil to wrap red bean paste with and place in freezer until solid</li>
+    <li>Combine glutinous rice flour and green tea powder to thorougly mix</li>
+    <li>Mix in water then sugar until mixture becomes smooth</li>
+    <li>Wrap bowl with plastic wrap and microwave for 3.5 minutes</li>
+    <li>Remove red bean paste once solid and divide equally into 8 balls</li>
+    <li>Once rice & flour mixture is finished heating, stir and reheat for another 15-30 seconds</li>
+    <li width="5">
+      Sprinkle a workable surface with cornstarch.
+      Separate roughly 2 tablespoons of the rice & flour mixture into a ball then flatten.
+      Place 1 frozen red bean paste in the center of the dough and pinch/press/roll the dought to fully cover the paste.
+      Add a small amount of cornstarch and place seam-side down onto baking paper.      
+    </li>
+  </ol>
 </body>
 </html>
