Completed website with 2 new recipes, with a total of 3. Added in background color with slight formatting.

--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -4,22 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mochi</title>
+  <title>Simple Recipes: Mochi</title>
 </head>
-<body>
-  <h1>Mochi with Red Bean</h1>
-  <img src="../images/mochi.jpg" style="width: 100vw">
+<body style="background-color:rgb(233, 64, 98)">
+  <a href="../index.html">Home</a>
+  <h1 style="text-align:center;">Mochi with Red Bean</h1>
+
+  <img alt="Mochi" src="../images/mochi.jpg" style="width: 97vw">
   <h3>Ingredient List:</h3>
   <ul>
     <li>1 cup sweetened red bean paste</li>
     <li>1 cup glutinous rice flour</li>
-    <li>1 teaspoon green tea powder (matcha)</li>
+    <li>1 tsp green tea powder (matcha)</li>
     <li>1 cup water</li>
     <li>1/4 cup white sugar</li>
     <li>1/2 cup cornstarch</li>
   </ul>
 
-  <h3>Cooking steps:</h3>
+  <h3>Cooking Steps:</h3>
   <ol>
     <li>Prepare aluminium foil to wrap red bean paste with and place in freezer until solid</li>
     <li>Combine glutinous rice flour and green tea powder to thorougly mix</li>
