Small formatting update

--- a/recipes/pesto_pasta.html
+++ b/recipes/pesto_pasta.html
@@ -10,7 +10,7 @@
 
 <body style="background-color:greenyellow">
   <div>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" style="text-decoration: none">Home</a>
     <h1 style="text-align:center;">Spaghetti Pasta with Pesto</h1>
     <img alt="Pesto spaghetti" src="../images/pesto.jpg" style="width: 97vw">
   </div>
