--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 style="text-align: center">Simple Recipe List</h1>
 
   <div>
-    <h2><a href="../odin-recipes/recipes/mochi.html">Mochi</a></h2>
+    <h2><a href="../odin-recipes/recipes/mochi.html" style="text-decoration: none">Mochi</a></h2>
     <label>Servings: 8 pieces</label>
     <br>
     <a href="../odin-recipes/recipes/mochi.html">
@@ -21,7 +21,7 @@
   </div>
 
   <div>
-    <h2><a href="../odin-recipes/recipes/pesto_pasta.html">Pesto Pasta</a></h2>
+    <h2><a href="../odin-recipes/recipes/pesto_pasta.html" style="text-decoration: none">Pesto Pasta</a></h2>
     <label>Servings: 4 people</label>
     <br>
     <a href="../odin-recipes/recipes/pesto_pasta.html">
@@ -30,7 +30,7 @@
   </div>
 
   <div>
-    <h2>Egg Fried Rice with Chicken</h2>
+    <h2><a href="../odin-recipes/recipes/fried_rice.html" style="text-decoration: none">Egg Fried Rice with Chicken</a></h2>
     <label>Servings: 4 people</label>
     <br>
     <a href="../odin-recipes/recipes/fried_rice.html">
