--- a/recipes/fried_rice.html
+++ b/recipes/fried_rice.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:gold">
   <div>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" style="text-decoration: none">Home</a>
     <h1 style="text-align: center">Egg Fried Rice with Chicken</h1>
     <img alt="Egg fried rice w/ chicken" style="width: 97vw" src="../images/chickenfriedrice-10.jpg">
   </div>
