--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -7,7 +7,7 @@
   <title>Simple Recipes: Mochi</title>
 </head>
 <body style="background-color:rgb(233, 64, 98)">
-  <a href="../index.html">Home</a>
+  <a href="../index.html" style="text-decoration: none">Home</a>
   <h1 style="text-align:center;">Mochi with Red Bean</h1>
 
   <img alt="Mochi" src="../images/mochi.jpg" style="width: 97vw">
